@@ -1,0 +1,7 @@
+"""
+SpecialObjects Package
+
+Various special objects -- to specific for inclusion in the main FloatCanvas
+
+"""
+pass
